--- a/react-node/src/index.css
+++ b/react-node/src/index.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+  color: white;
 }
 
 html {
@@ -10,7 +11,7 @@ html {
 
 body {
   margin: 0;
-  background-color: whitesmoke;
+  background-color: #222831;
 }
 
 .centered {
