--- a/react-node/src/pages/HomePage.css
+++ b/react-node/src/pages/HomePage.css
@@ -1,6 +1,7 @@
 .homepage_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 20px;
+  padding: 20px;
   margin-left: 200px;
 }
