--- a/react-node/src/components/SideNavBar.css
+++ b/react-node/src/components/SideNavBar.css
@@ -20,7 +20,7 @@
 }
 
 .sidebar {
-  background-color: rgb(11, 20, 22);
+  background-color: #393e46;
   box-sizing: border-box;
   color: rgb(242, 242, 242);
   color-scheme: dark;
