--- a/react-node/src/components/Navbar.css
+++ b/react-node/src/components/Navbar.css
@@ -8,6 +8,7 @@
   border-color: #00adb5;
   border-style: solid;
   background-color: #393e46;
+  justify-content: space-between;
 }
 
 .logo {
@@ -36,6 +37,14 @@
 }
 
 .login {
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+  padding-left: 1rem;
+  gap: 0.25rem;
+}
+
+.logout {
   display: flex;
   align-items: center;
   justify-content: stretch;
