--- a/react-node/src/components/SideNavBar.css
+++ b/react-node/src/components/SideNavBar.css
@@ -1,29 +1,84 @@
-.sidebar_container {
-  position: relative;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 200px;
+.page.sidebar-2-page {
+  background: #17132a;
 }
 
-.sidebar {
-  background-color: #393e46;
-  box-sizing: border-box;
-  color: rgb(242, 242, 242);
-  color-scheme: dark;
-  display: block;
-  font-size: 14px;
-  height: 758px;
-  line-height: 21px;
-  overflow-wrap: break-word;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 16px;
-  position: sticky;
-  scrollbar-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
-  scrollbar-width: thin;
-  top: 0px;
+.sidebar-2 {
+  position: relative;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  width: 56px;
+  height: 100%;
+  background: #393e46;
+  transition: width 0.4s;
+}
+
+.sidebar-2.open {
+  width: 260px;
+}
+
+.sidebar-2 .inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 260px;
+}
+
+.sidebar-2 header {
+  display: flex;
+  align-items: center;
+  height: 64px;
+  padding: 0 6px;
+  background: rgb(0 0 0 / 25%);
+}
+
+.sidebar-2-burger {
+  width: 44px;
+  height: 56px;
+  display: grid;
+  place-items: center;
+  color: #f9f9f9;
+}
+
+.sidebar-2 header > img {
+  height: 28px;
+}
+
+.sidebar-2 nav {
+  display: grid;
+  padding: 6px;
+  gap: 2px;
+}
+
+.sidebar-2 nav > button {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  height: 44px;
+  width: 44px;
+  font-family: "Poppins";
+  font-size: 16px;
+  text-transform: capitalize;
+  line-height: 1;
+  padding: 0 12px;
+  border-radius: 8px;
+  color: #f9f9f9;
+}
+
+.sidebar-2 nav > button:hover {
+  background: rgb(0 0 0 / 30%);
+}
+
+.sidebar-2 header > img,
+.sidebar-2 nav > button p {
+  opacity: 0;
+  transition: 0.3s;
+}
+
+.sidebar-2.open :is(nav button p, header > img) {
+  opacity: 1;
+}
+
+.sidebar-2.open nav > button {
   width: 100%;
 }
