--- a/react-node/src/components/SideNavBar.css
+++ b/react-node/src/components/SideNavBar.css
@@ -1,5 +1,5 @@
 .page.sidebar-2-page {
-  background: #17132a;
+  background: #222831;
 }
 
 .sidebar-2 {
@@ -7,9 +7,9 @@
   overflow: hidden;
   top: 0;
   left: 0;
-  width: 56px;
+  width: 62px;
   height: 100%;
-  background: #393e46;
+  background: #222831;
   transition: width 0.4s;
 }
 
@@ -29,19 +29,19 @@
   align-items: center;
   height: 64px;
   padding: 0 6px;
-  background: rgb(0 0 0 / 25%);
+  background: rgb(#222831 / 25%);
 }
 
 .sidebar-2-burger {
-  width: 44px;
-  height: 56px;
+  width: 40px;
+  height: 50px;
   display: grid;
-  place-items: center;
+  place-content: center;
   color: #f9f9f9;
+  background-color: black;
 }
-
-.sidebar-2 header > img {
-  height: 28px;
+.sidebar-2-burger::before {
+  background-color: transparent;
 }
 
 .sidebar-2 nav {
@@ -55,18 +55,30 @@
   gap: 12px;
   align-items: center;
   height: 44px;
-  width: 44px;
+  width: 50px;
   font-family: "Poppins";
   font-size: 16px;
   text-transform: capitalize;
   line-height: 1;
-  padding: 0 12px;
+  padding: 17px;
   border-radius: 8px;
+  background-color: black;
   color: #f9f9f9;
+}
+.sidebar-2 nav > button h6 {
+  position: relative;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .sidebar-2 nav > button:hover {
   background: rgb(0 0 0 / 30%);
+  color: white;
+  background-color: transparent;
+}
+
+.sidebar-2 nav > button::before {
+  background-color: transparent;
 }
 
 .sidebar-2 header > img,
