--- a/react-node/src/pages/Comments.css
+++ b/react-node/src/pages/Comments.css
@@ -16,6 +16,15 @@
   box-shadow: 0 5px 4px rgba(0, 0, 0, 0.1);
 }
 
+.post_comments {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  padding-left: 16px; /* Assuming 'md' corresponds to 16px */
+  padding-right: 16px; /* Assuming 'md' corresponds to 16px */
+  position: relative;
+}
+
 .h2 {
   width: auto;
 }
