--- a/react-node/src/pages/Comments.css
+++ b/react-node/src/pages/Comments.css
@@ -1,4 +1,4 @@
-.post_container {
+/* .post_container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,15 +20,52 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  padding-left: 16px; /* Assuming 'md' corresponds to 16px */
-  padding-right: 16px; /* Assuming 'md' corresponds to 16px */
+  padding-left: 16px;
+  padding-right: 16px;
   position: relative;
+} */
+
+.post_container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 1px solid #ddd;
+  margin-bottom: 20px;
 }
 
-.h2 {
-  width: auto;
+.post_header {
+  margin-bottom: 10px;
 }
 
-.h6 {
-  width: auto;
+.post_content {
+  margin-bottom: 20px;
+}
+
+.post_interactions {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 10px;
+  gap: 10px;
+}
+
+.like_button,
+.comment_button {
+  background-color: #0079d3;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.like_button:hover,
+.comment_button:hover {
+  background-color: #005a9e;
+}
+
+.like_icon {
+  margin-right: 5px;
+}
+.dislike_icon {
+  margin-left: 5px;
 }
