--- a/react-node/src/pages/KdramaPage.css
+++ b/react-node/src/pages/KdramaPage.css
@@ -18,11 +18,13 @@
 
 .kdrama_trailer {
   width: 100%;
-  height: 400px;
+  height: 100%;
   background-size: cover;
   background-position: center;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .kdrama_image {
