--- a/react-node/src/pages/Discussion.css
+++ b/react-node/src/pages/Discussion.css
@@ -47,3 +47,10 @@
   font-size: 14px;
   color: #aaaaaa;
 }
+
+.delete_post_button {
+  background-color: #d30000;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+}
