--- a/react-node/src/components/Navbar.css
+++ b/react-node/src/components/Navbar.css
@@ -51,3 +51,26 @@
   padding-left: 1rem;
   gap: 0.25rem;
 }
+
+.dropdown {
+  position: absolute;
+  top: 42px;
+  background-color: #222831;
+  min-width: 310px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  max-height: 300px;
+  overflow-y: auto;
+  border-radius: 5px;
+}
+
+.dropdown-item {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-item:hover {
+  background-color: #393e46;
+}
