--- a/react-node/src/pages/Favourites.css
+++ b/react-node/src/pages/Favourites.css
@@ -1,7 +1,28 @@
+/* .main_container {
+  display: flex;
+}
+
 .favourites_page_container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 20px;
   padding: 20px;
   flex-grow: 1;
+} */
+
+/* Main Container */
+.main_container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px; /* Space between cards */
+  padding: 20px;
+}
+
+/* Individual Card */
+.favourites_page_container {
+  width: 15%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
 }
